# auto-reply-agent

./: .env.example  .gitignore  CLAUDE.md  Procfile  README.md  SKILL.md  instructions.txt  nixpacks.toml  pyproject.toml  start-wiki.bat  start-wiki.ps1  start.ps1  wiki-prompt.txt
docs/superpowers/plans/: 2026-05-27-phase-0-scaffold.md  2026-05-27-phase-1-wiki-and-intent.md  2026-05-27-phase-2-draft-pipeline.md  2026-05-27-phase-3-feedback-and-costs.md  2026-05-27-wiki-explorer.md
docs/superpowers/specs/: 2026-05-27-auto-reply-agent-design.md  2026-05-27-wiki-explorer-design.md
scripts/: build_intent_eval.py  build_wiki.py  build_wiki_graph.py  eval_intent.py  refresh_fixtures.py
src/auto_reply/: settings.py  tls.py
src/auto_reply/llm/: client.py  pricing.py
src/auto_reply/pipeline/: context_builder.py  drafter.py  intent_router.py  process_message.py  templates.py  wiki_qa.py
src/auto_reply/sources/: lumenx.py  poller.py  wiki_builder.py  wiki_loader.py  wiki_store.py
src/auto_reply/store/: db.py  feedback.py  migrations.py
src/auto_reply/web/: app.py  dashboard.py  (+1 more)
tests/: conftest.py  test_context_builder.py  test_dashboard.py  test_dashboard_tabs.py  test_drafter.py  test_feedback.py  test_intent_eval_fixture.py  test_intent_router.py  test_llm_client.py  test_lumenx.py  test_poller.py  test_process_message.py  test_settings.py  test_store.py  test_templates.py  test_web_health.py  test_wiki_builder.py  test_wiki_explorer.py  test_wiki_loader.py  test_wiki_qa.py  test_wiki_store.py
tests/fixtures/: intent_eval.jsonl  lumenx_products.json
(+7 files in other folders)
